WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240524
[Cocoa] Web Driver: `RemoteAutomationTarget`s marked for termination and targets that have never been paired may briefly be indistinguishable in application target listing
https://bugs.webkit.org/show_bug.cgi?id=240524
Summary
[Cocoa] Web Driver: `RemoteAutomationTarget`s marked for termination and targ...
Patrick Angle
Reported
2022-05-17 09:30:12 PDT
This can lead to odd failures in safaridriver where a previously "Terminated" automation target is revived as ready to be used by a new safaridriver session even though it is about to be terminated.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-17 09:30:22 PDT
<
rdar://problem/93430106
>
Patrick Angle
Comment 2
2022-05-17 10:23:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/679
EWS
Comment 3
2022-05-17 16:24:14 PDT
Committed
r294361
(
250664@main
): <
https://commits.webkit.org/250664@main
> Reviewed commits have been landed. Closing PR #679 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug